# ProCon2023Kyougi

./: .gitignore  README.md  System.md
simulator/: build.cmd  meson.build  simulator.cpp  solve1.h  solve2.h  solveList.h  solveList2.h
simulator/fieldDatas/: A11-150-3.txt  A11.csv  A13.csv  A15-150-3.txt  A15-30-3.txt  A15-90-3.txt  A15.csv  A17-150-3.txt  A17-200-3.txt  A17.csv  A21-150-3.txt  A21-200-3.txt  A21-90-3.txt  A21.csv  A25-90-3.txt  A25.csv  A25.txt  B11-150-3.txt  B11.csv  B13-150-3.txt  B13-200-3.txt  B13-90-3.txt  B13.csv  B13.txt  B15-150-3.txt  B15-30-3.txt  B15.csv  B17-150-3.txt  B17-200-3.txt  B17-90-3.txt  B17.csv  B21-90-3.txt  B21.csv  B25-150-3.txt  B25.csv  C11-150-3.txt  C11-200-3.txt  C11-30-3.txt  C11-90-3.txt  C11.csv  (+15 more)
simulator/include/: display.h  simulator.h  solve1.h  solve2.h  solveList.h  solveList2.h
simulator/interfaceLogs/: log1(23-10-03_20-43-29).csv  log10(23-10-03_20-44-18).csv  log10(23-10-14_12-43-23).csv  log11(23-10-03_20-44-18).csv  log11(23-10-14_12-52-10).csv  log12(23-10-03_20-44-18).csv  log12(23-10-14_12-49-33).csv  log12(23-10-14_12-52-10).csv  log13(23-10-03_20-44-19).csv  log13(23-10-14_12-52-10).csv  log14(23-10-03_20-44-19).csv  log14(23-10-14_12-55-35).csv  log15(23-10-03_20-44-19).csv  log15(23-10-14_12-55-35).csv  log16(23-10-03_20-47-46).csv  log16(23-10-14_12-57-43).csv  log17(23-10-03_20-47-46).csv  log18(23-10-03_20-47-46).csv  log18(23-10-14_12-58-09).csv  log19(23-10-14_12-58-09).csv  log2(23-10-03_20-43-29).csv  log2(23-10-14_12-25-48).csv  log21(23-10-14_13-00-18).csv  log22(23-10-14_13-00-18).csv  (+24 more)
(+2287 files in other folders)
